# prelegal

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  catalog.json
backend/: .gitignore  pyproject.toml
backend/prelegal_backend/: auth.py  chat.py  main.py
frontend/: TESTING.md  package-lock.json  package.json  vitest.config.mts
frontend/src/__tests__/components/: NDAForm.test.tsx  NDAPreview.test.tsx
frontend/src/__tests__/lib/: nda-template.test.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/doc/[slug]/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/: ChatPanel.tsx  DocHeader.tsx  DocumentCatalog.tsx  GenericDocPreview.tsx  GenericDocShell.tsx  NDAForm.tsx  NDAPreview.tsx  NDAShell.tsx
frontend/src/lib/: api.ts  document-configs.ts  nda-template.ts
frontend/src/types/: nda.ts
scripts/: start-linux.sh  start-mac.sh  start-windows.ps1  stop-mac.sh  stop-windows.ps1
templates/: LICENSE.txt
