[project]
name = "prelegal-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "litellm>=1.85.0",
    "markdown>=3.6",
    "uvicorn[standard]>=0.34.0",
    "PyJWT>=2.8.0",
    "bcrypt>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["prelegal_backend"]
